removed slug
